<resources>
    <string name="app_name">My Journal</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_uid_key">USER_UID</string>
    <string name="fetching_data">Fetching Data...</string>
    <string name="network_error">Network Error</string>
    <string name="time_stamp">TimeStamp</string>
    <string name="entry_title_hint">Enter title..</string>
    <string name="entry_text_hint">Enter story...</string>
    <string name="entry_location_hint">Enter location...</string>
    <string name="entry_location_text_view">Location:</string>
    <string name="add_image">Add Photo</string>
    <string name="day">entry_day</string>
    <string name="wk_day">week_day_key</string>
    <string name="month_year">month_year_key</string>
    <string name="time_txt">time_key</string>
    <string name="title_txt">title_txt_key</string>
    <string name="text_txt">text_text_key</string>
    <string name="location_txt">location_txt_key</string>
    <string name="select_intent">Complete action using...</string>
    <string name="save_entry">Save Entry</string>
    <string name="entry_image">entry_image_key</string>
    <string name="enter_title">You must enter a title</string>
    <string name="uploading">Saving...</string>
    <string name="please_wait">Please wait</string>
    <string name="upload_dialog_tag">UPLOAD_DIALOG_TAG</string>
    <string name="cancel_upload">Cancel</string>
    <string name="minimize">Minimize</string>
    <string name="upload_prefix">upload of</string>
    <string name="upload_suffix">successful</string>
    <string name="upload_fail_suffix">failed</string>
    <string name="loading">Loading...</string>
    <string name="adapter_position_key">ADAPTER_POSITION_KEY</string>
    <string name="entries_fragment_tag">TAG_ENTRIES_FRAGMENT</string>
    <string name="entry_story">Story:</string>
    <string name="entry_title">Title:</string>
    <string name="update_prefix">update of</string>
    <string name="update_dialog_tag">UPDATE_DIALOG_TAG</string>
    <string name="delete_prefix">delete of</string>
    <string name="deleting">Deleting...</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="delete_dialog_tag">DELETE_DIALOG_TAG</string>
    <string name="cannot_load_image">cannot load image</string>
    <string name="no_image_selected">no image selected</string>
    <string name="sign_in_successful">sign-in successful</string>
    <string name="sign_in_cancelled">sign-in cancelled</string>
    <string name="need_network">You need active internet connection to sign-in</string>
    <string name="no_entries">There are no entries</string>
    <string name="entries_fragment_title">Entries</string>
    <string name="add_an_entry">Add Entry</string>
    <string name="view_entry">View Entry</string>
</resources>
