<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<ScrollView
    android:id="@+id/item_add_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/icons">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/icons"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/entry_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/entry_image_description"
             />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp">

            <TextView
                android:id="@+id/entry_day_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:textSize="27sp"
                tools:text="27" />

            <TextView
                android:id="@+id/entry_wk_day_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/entry_day_text_view"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toRightOf="@+id/entry_day_text_view"
                android:layout_toEndOf="@+id/entry_day_text_view"
                tools:text="Wednesday" />

            <TextView
                android:id="@+id/entry_month_year_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/entry_wk_day_text_view"
                android:layout_below="@+id/entry_wk_day_text_view"
                android:layout_marginTop="2dp"
                android:layout_toRightOf="@+id/entry_day_text_view"
                android:layout_toEndOf="@+id/entry_day_text_view"
                tools:text="JUNE 2018" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/entry_time_text_view"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="12dp"
                android:layout_marginEnd="12dp"
                android:layout_alignBottom="@+id/entry_month_year_text_view"
                tools:text="04:08 PM"/>
        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entry_title_edit_text"
            android:layout_marginTop="16dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/primary_text"
            android:minHeight="25dp"
            android:hint="@string/entry_title_hint"
            android:textStyle="bold"
            android:background="@color/entry_edit_text_background"
            android:imeOptions="actionDone"
            android:inputType="none"
            android:maxLines="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entry_text_edit_text"
            android:layout_marginTop="10dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/primary_text"
            android:minHeight="80dp"
            android:hint="@string/entry_text_hint"
            android:inputType="none"
            android:background="@color/entry_edit_text_background" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            android:text="@string/entry_location_text_view"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/entry_location_edit_text"
            android:layout_marginTop="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/secondary_text"
            android:minHeight="25dp"
            android:maxLines="1"
            android:hint="@string/entry_location_hint"
            android:inputType="none"
            android:background="@android:color/transparent" />
    </LinearLayout>

</ScrollView>


</layout>