<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/icons">
       <com.gturedi.views.StatefulLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:id="@+id/view_entry_stateful">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@color/icons"
               android:orientation="vertical">

                 <ImageView
                     android:id="@+id/entry_image"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
                     tools:src="@drawable/ic_image" />
                 <ImageView
                     android:id="@+id/delete_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
                     android:layout_marginEnd="10dp"
                     android:layout_marginRight="10dp"
                     android:visibility="gone"

                     android:src="@drawable/ic_delete_black"/>




               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="18dp">

                   <TextView
                       android:id="@+id/entry_day_text_view"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_alignParentLeft="true"
                       android:layout_alignParentStart="true"
                       android:layout_marginLeft="12dp"
                       android:layout_marginStart="12dp"
                       android:textSize="27sp"
                       tools:text="27" />

                   <TextView
                       android:id="@+id/entry_wk_day_text_view"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_alignTop="@+id/entry_day_text_view"
                       android:layout_marginLeft="5dp"
                       android:layout_marginStart="5dp"
                       android:layout_toRightOf="@+id/entry_day_text_view"
                       android:layout_toEndOf="@+id/entry_day_text_view"
                       tools:text="Wednesday" />

                   <TextView
                       android:id="@+id/entry_month_year_text_view"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_alignLeft="@+id/entry_wk_day_text_view"
                       android:layout_below="@+id/entry_wk_day_text_view"
                       android:layout_marginTop="2dp"
                       android:layout_toRightOf="@+id/entry_day_text_view"
                       android:layout_toEndOf="@+id/entry_day_text_view"
                       tools:text="JUNE 2018" />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/entry_time_text_view"
                       android:layout_alignParentRight="true"
                       android:layout_alignParentEnd="true"
                       android:layout_marginRight="12dp"
                       android:layout_marginEnd="12dp"
                       android:layout_alignBottom="@+id/entry_month_year_text_view"
                       tools:text="04:08 PM"/>
               </RelativeLayout>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="16dp"
                   android:paddingStart="8dp"
                   android:paddingLeft="8dp"
                   android:paddingEnd="8dp"
                   android:paddingRight="8dp"
                   android:textColor="@color/primary_text"
                   android:textSize="18sp"
                   android:text="@string/entry_title"/>
               <ImageView
                   android:id="@+id/ic_title_edit"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="16dp"
                   android:layout_gravity="right"
                   android:layout_marginRight="5dp"
                   android:layout_marginEnd="5dp"
                   android:src="@drawable/ic_edit"/>
               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/entry_title_edit_text"
                   android:paddingStart="8dp"
                   android:paddingLeft="8dp"
                   android:paddingEnd="8dp"
                   android:paddingRight="8dp"
                   android:textColor="@color/primary_text"
                   android:minHeight="25dp"
                   android:hint="@string/entry_title_hint"
                   android:textStyle="bold"
                   android:background="@android:color/transparent"
                   android:imeOptions="actionDone"
                   android:inputType="none"
                   android:focusable="false"
                   android:maxLines="1"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="16dp"
                   android:paddingStart="8dp"
                   android:paddingLeft="8dp"
                   android:paddingEnd="8dp"
                   android:paddingRight="8dp"
                   android:textColor="@color/primary_text"
                   android:textSize="18sp"
                   android:text="@string/entry_story"/>
               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/entry_text_edit_text"
                   android:layout_marginTop="10dp"
                   android:paddingStart="8dp"
                   android:paddingLeft="8dp"
                   android:paddingEnd="8dp"
                   android:paddingRight="8dp"
                   android:textColor="@color/primary_text"
                   android:minHeight="80dp"
                   android:hint="@string/entry_text_hint"
                   android:inputType="none"
                   android:focusable="false"
                   android:background="@android:color/transparent" />
               <ImageView
                   android:id="@+id/ic_story_edit"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="right"
                   android:layout_marginTop="2dp"
                   android:layout_marginRight="5dp"
                   android:layout_marginEnd="5dp"
                   android:src="@drawable/ic_edit"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="16dp"
                   android:paddingStart="8dp"
                   android:paddingLeft="8dp"
                   android:paddingEnd="8dp"
                   android:paddingRight="8dp"
                   android:textColor="@color/primary_text"
                   android:textSize="18sp"
                   android:text="@string/entry_location_text_view"/>
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <EditText
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/entry_location_edit_text"
                       android:layout_marginTop="8dp"
                       android:paddingStart="8dp"
                       android:paddingLeft="8dp"
                       android:paddingEnd="8dp"
                       android:paddingRight="8dp"
                       android:textColor="@color/secondary_text"
                       android:minHeight="25dp"
                       android:maxLines="1"
                       android:hint="@string/entry_location_hint"
                       android:inputType="none"
                       android:focusable="false"
                       android:background="@android:color/transparent" />
                   <ImageView
                       android:id="@+id/ic_location_edit"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="2dp"
                       android:layout_marginStart="2dp"
                       android:src="@drawable/ic_edit"/>

               </LinearLayout>

           </LinearLayout>

       </com.gturedi.views.StatefulLayout>

    </ScrollView>


</layout>